# aria

./: .corpusenv_token  .gitignore  .python-version  AGENTS.md  README.md  debug_grads.py  debug_helix.py  prepare_data.py  pyproject.toml
.corpusenv/: pyvenv.cfg
.sisyphus/: summary.md
aria/: bitnet_v2.py  cli.py  config.py  main.py  think.py  tui.py
aria/model/: engram.py  helix.py  jepa.py  nsa.py  sct.py
aria/optim/: hymopt.py
aria/train/: controller.py  pretrain.py  reward_models.py
configs/: 29m.yaml  _bench.yaml  _compile_exp.yaml  _tmp_bs32.yaml  _tmp_bs48.yaml  _tmp_bs8.yaml  _tmp_l4.yaml  _tmp_nockpt.yaml  _tmp_s256_b32.yaml  _tmp_seq2048.yaml  smoke.yaml  test_quick.yaml  train_29m.yaml  train_50m.yaml  train_8h.yaml  train_hdd.yaml
rust_tokenizer/: Cargo.toml
rust_tokenizer/src/: lib.rs
scripts/: build_corpus.py  dump_code.sh  pack_bin.py
src/: bitnet_v2.py  cld.py  config.py  ema.py  main.py  mask.py  prompt_compressor.py  qac.py  sparse_68.py  spectral_tta.py  think.py  tui.py
src/data/: dataset.py  grpo_dataset.py
src/kernels/: fused_gru_lti.py  hfw_basis.py  sct_mm.py  sct_quant.py
src/losses/: vicreg.py
src/model/: AGENTS.md  aria_jepa.py  byteflow.py  depth_lora.py  engram.py  helix.py  hwf_kan.py  kan.py  loop_emb.py  loop_ln.py  lti_injection.py  model.py  nsa.py  sct.py
src/optim/: hymopt.py  schedule_free.py  sct_eggroll.py
src/train/: controller.py  grpo.py  sft.py  (+2 more)
tests/: test_audit_fixes.py  test_compile.py  test_grpo.py  test_jepa_collapse.py  test_jepa_stp.py  test_sct_grad.py  test_sct_quant.py  test_smoke.py
