[project]
name = "aria-torch2"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.11.0",
    "flash-attn-4==4.0.0b21",
    "triton>=3.2.0",
    "pyyaml",
    "textual>=8.2.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
