[project]
name = "aria"
version = "0.2.0"
description = "1.58-bit ternary LLM: GDN2 recurrent attention + HelixCore + SCTLinear"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.11.0",
    "triton>=3.2.0",
    "pyyaml",
    "textual>=8.2.8",
]

[project.scripts]
aria = "aria.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aria*"]
